--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading text-uppercase">&nbsp&nbsp&nbsp</div>
-          <div class="intro-lead-in">&nbsp&nbsp</div>
-          <div class="text-primary">&nbsp&nbsp</div>
+          <div class="intro-heading text-uppercase">Projeart</div>
+          <div class="intro-lead-in">Engenharia e Manutenção</div>
+          <div class="text-primary">Dando Forma a sua Ideia</div>
           <!--<div class="intro-heading text-uppercase">It's Nice To Meet You</div>-->
           <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Saiba Mais</a>-->
         </div>
